--- a/src/main/resources/ScrumFaster/ScrumBoardUI.fxml
+++ b/src/main/resources/ScrumFaster/ScrumBoardUI.fxml
@@ -16,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1460.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScrumFaster.ScrumboardController">
    <children>
-      <Button fx:id="DisplayStatisticsButton" layoutX="1215.0" layoutY="670.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="162.0" text="Display Statistics">
+      <Button fx:id="DisplayStatisticsButton" layoutX="1215.0" layoutY="670.0" mnemonicParsing="false" onAction="#DisplayStatistics" prefHeight="42.0" prefWidth="162.0" text="Display Statistics">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
