--- a/src/main/resources/ScrumFaster/ScrumBoardUI.fxml
+++ b/src/main/resources/ScrumFaster/ScrumBoardUI.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.ComboBox?>
@@ -17,7 +16,7 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1460.0" style="-fx-background-color: lightgrey;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ScrumFaster.ScrumboardController">
    <children>
-      <Button fx:id="SaveBoardButton" layoutX="1154.0" layoutY="694.0" mnemonicParsing="false" onAction="#saveBoard" prefHeight="42.0" prefWidth="125.0" text="Save Board">
+      <Button fx:id="SaveBoardButton" layoutX="1154.0" layoutY="710.0" mnemonicParsing="false" onAction="#saveBoard" prefHeight="26.0" prefWidth="126.0" stylesheets="@buttonStyle.css" text="Save Board" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
@@ -95,8 +94,8 @@
                </content></ScrollPane>
          </children>
       </AnchorPane>
-      <VBox layoutX="505.0" layoutY="20.0" prefHeight="77.0" prefWidth="5.0" style="-fx-background-color: #4e5bbf;" />
-      <Pane layoutX="1154.0" layoutY="195.0" prefHeight="60.0" prefWidth="270.0" style="-fx-background-color: grey;">
+      <VBox layoutX="500.0" layoutY="20.0" prefHeight="77.0" prefWidth="5.0" style="-fx-background-color: #4e5bbf;" />
+      <Pane layoutX="1154.0" layoutY="321.0" prefHeight="60.0" prefWidth="270.0" style="-fx-background-color: #4e5bbf;">
          <children>
             <Text fill="#ffffffc7" layoutX="15.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="CREATE USER STORY" textAlignment="CENTER">
                <font>
@@ -105,16 +104,21 @@
             </Text>
          </children>
       </Pane>
-      <Pane layoutX="1154.0" layoutY="120.0" prefHeight="60.0" prefWidth="283.0">
+      <Pane layoutX="1151.0" layoutY="8.0" prefHeight="109.0" prefWidth="292.0">
          <children>
-            <Label layoutX="26.0" layoutY="33.0" text="0 / 0 Tasks Completed" textAlignment="CENTER">
+            <Label fx:id="progresslabel" layoutX="134.0" layoutY="9.0" text="0%">
                <font>
-                  <Font name="Arial Bold" size="22.0" />
+                  <Font name="System Bold" size="16.0" />
+               </font></Label>
+            <ProgressBar fx:id="myprogressbar" layoutX="42.0" layoutY="34.0" prefHeight="25.0" prefWidth="208.0" progress="0.0" />
+            <Label fx:id="taskupdate" layoutX="59.0" layoutY="59.0" prefHeight="36.0" prefWidth="174.0" text="0 / 0 Points Completed" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial Bold" size="15.0" />
                </font>
             </Label>
          </children>
       </Pane>
-      <Pane layoutX="1154.0" layoutY="269.0" prefHeight="339.0" prefWidth="270.0" style="-fx-background-color: white;">
+      <Pane layoutX="1154.0" layoutY="381.0" prefHeight="323.0" prefWidth="270.0" style="-fx-background-color: white;">
          <children>
             <Label layoutX="15.0" layoutY="15.0" text="As">
                <font>
@@ -152,49 +156,58 @@
                </font>
             </Label>
             <ComboBox fx:id="priorityComboBox" layoutX="120.0" layoutY="285.0" onAction="#setStatusPriority" onContextMenuRequested="#setStatusPriority" onMouseClicked="#setStatusPriority" prefHeight="26.0" prefWidth="72.0" />
-            <Button layoutX="201.0" layoutY="286.0" mnemonicParsing="false" onAction="#addUserStory" prefHeight="26.0" prefWidth="58.0" style="-fx-background-color: lightblue;" text="Add">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Button>
-         </children>
-      </Pane>
-      <ScrollPane fx:id="UsersScrollPane" hbarPolicy="NEVER" layoutX="516.0" layoutY="20.0" prefHeight="78.0" prefWidth="610.0" style="-fx-background-radius: 20;" stylesheets="@scrollpaneStyle.css" vbarPolicy="NEVER" />
-      <VBox alignment="CENTER" layoutX="1137.0" prefHeight="138.0" prefWidth="321.0" spacing="10.0">
-         <children>
-            <TextField fx:id="UsersTextBox" promptText="Team Member Name" />
-            <Label fx:id="UsersTaskColourLabel" text="Task Colour">
-               <font>
-                  <Font name="Arial Bold Italic" size="12.0" />
-               </font>
-            </Label>
-            <ColorPicker fx:id="UsersColourPicker" />
-            <Button fx:id="AddNewTeammateButton" mnemonicParsing="false" onAction="#newTeamMate" prefHeight="20.0" prefWidth="162.0" text="Add Team Member">
+            <Button layoutX="204.0" layoutY="286.0" mnemonicParsing="false" onAction="#addUserStory" prefHeight="26.0" prefWidth="55.0" stylesheets="@buttonStyle.css" text="Add" textFill="WHITE">
                <font>
                   <Font name="Arial Bold" size="14.0" />
                </font>
             </Button>
          </children>
-         <padding>
-            <Insets top="10.0" />
-         </padding>
-      </VBox>
-      <ProgressBar fx:id="myprogressbar" layoutX="1178.0" layoutY="642.0" prefHeight="30.0" prefWidth="231.0" progress="0.0" />
-      <Label fx:id="progresslabel" layoutX="1275.0" layoutY="625.0" text="Label" />
-      <Button fx:id="LoadBoardButton" layoutX="1289.0" layoutY="694.0" mnemonicParsing="false" onAction="#loadBoard" prefHeight="42.0" prefWidth="125.0" text="Load Board">
+      </Pane>
+      <ScrollPane fx:id="UsersScrollPane" hbarPolicy="NEVER" layoutX="516.0" layoutY="20.0" prefHeight="78.0" prefWidth="610.0" style="-fx-background-radius: 20;" stylesheets="@scrollpaneStyle.css" vbarPolicy="NEVER" />
+      <Button fx:id="LoadBoardButton" layoutX="1299.0" layoutY="710.0" mnemonicParsing="false" onAction="#loadBoard" prefHeight="26.0" prefWidth="126.0" stylesheets="@buttonStyle.css" text="Load Board" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="nextSprintButton" layoutX="1037.0" layoutY="778.0" mnemonicParsing="false" onAction="#goToNextSprint" text="Next Sprint">
+      <Button fx:id="nextSprintButton" layoutX="1154.0" layoutY="744.0" mnemonicParsing="false" onAction="#goToNextSprint" prefHeight="26.0" prefWidth="126.0" stylesheets="@buttonStyle.css" text="Next Sprint" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Button>
-      <Button fx:id="viewBurndownButton" layoutX="1222.0" layoutY="759.0" mnemonicParsing="false" onAction="#BurndownChartWindow" text="View Burndown">
+      <Button fx:id="viewBurndownButton" layoutX="1299.0" layoutY="744.0" mnemonicParsing="false" onAction="#BurndownChartWindow" prefHeight="26.0" prefWidth="126.0" stylesheets="@buttonStyle.css" text="View Burndown" textFill="WHITE">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Button>
+      <Pane layoutX="1154.0" layoutY="182.0" prefHeight="131.0" prefWidth="270.0" style="-fx-background-color: white;">
+         <children>
+            <TextField fx:id="UsersTextBox" layoutX="101.0" layoutY="14.0" prefHeight="25.0" prefWidth="155.0" promptText="&lt; Team Member Name &gt;" />
+            <ColorPicker fx:id="UsersColourPicker" layoutX="101.0" layoutY="53.0" prefHeight="25.0" prefWidth="155.0" />
+            <Button fx:id="AddNewTeammateButton" layoutX="54.0" layoutY="91.0" mnemonicParsing="false" onAction="#newTeamMate" prefHeight="20.0" prefWidth="162.0" stylesheets="@buttonStyle.css" text="Add Team Member" textFill="WHITE">
+               <font>
+                  <Font name="Arial Bold" size="14.0" />
+               </font>
+            </Button>
+            <Label layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="87.0" text="Name ">
+               <font>
+                  <Font name="Arial Bold" size="21.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="53.0" prefHeight="25.0" prefWidth="81.0" text="Colour">
+               <font>
+                  <Font name="Arial Bold" size="21.0" />
+               </font>
+            </Label>
+         </children>
+      </Pane>
+      <Pane layoutX="1154.0" layoutY="122.0" prefHeight="60.0" prefWidth="270.0" style="-fx-background-color: #4e5bbf;">
+         <children>
+            <Text fill="#ffffffc7" layoutX="46.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" style="-fx-font-weight: bold;" text="ADD TEAMMATE" textAlignment="CENTER">
+               <font>
+                  <Font name="Arial" size="22.0" />
+               </font>
+            </Text>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
